--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
 			</div>
 		</div>
 		<script type="module" src="index.js"></script>
+		<script src="https://unpkg.com/react@18/umd/react.development.js" crossorigin></script>
+    	<script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js" crossorigin></script>
+    	<script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
   </body>
 </html>
